refactor into envs

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,14 @@
-*.dll
-*.exe
 .DS_Store
-example.tf
-terraform.tfplan
-terraform.tfstate
-bin/
-modules-dev/
-pkg/
-vendor/
-website/.vagrant
-website/build
-website/node_modules
-.vagrant/
-*.backup
-./*.tfstate
-.terraform/
 *.log
-*.bak
-*~
 .*.swp
 .idea
+.vscode
+
+terraform.tfplan
+terraform.tfstate
+terraform.tfvars
+terraform.tfstate.backup
+.terraform.tfstate.lock.info
+./*.tfstate
+.terraform/
+
